[project]
name = "pubmed-fetcher"
version = "0.1.0"
description = ""
authors = [
    {name = "pravallika-0201",email = "golipravallika6@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests >=2.32.3,<3.0.0",
    "pandas >=2.2.3,<3.0.0",
    "beautifulsoup4 >=4.13.3,<5.0.0",
    "typer >=0.15.2,<0.16.0",
    "rich >=13.9.4,<14.0.0"
]

[tool.poetry]
packages = [{include = "pubmed_fetcher", from = "src"}]
[tool.poetry.scripts]
get-papers-list = "pubmed_fetcher.cli:app"



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
